wip: run minio with updater

--- a/.env.updater.example
+++ b/.env.updater.example
@@ -1,8 +1,8 @@
 S3_BACKUP=no
-S3_ENDPOINT_URL=https://s3.example.com
-S3_BUCKET=example-bucket
-S3_ACCESS_KEY=123456abcdef
-S3_SECRET_ACCESS_KEY=123456abcdef
+S3_ENDPOINT_URL=http://minio:9000
+S3_BUCKET=ripe-backups
+S3_ACCESS_KEY=CjGb9PDkjQqMi6V
+S3_SECRET_ACCESS_KEY=8s82NHXq6pPsJAP4S
 SMALLEST_PREFIX_V4=31
 SMALLEST_PREFIX_V6=127
 MAIL_REPORT=no
