--- a/.env.updater.example
+++ b/.env.updater.example
@@ -1,22 +1,18 @@
-S3_BACKUP=no
-S3_ENDPOINT_URL=http://minio:9000
-S3_BUCKET=ripe-backups
-S3_ACCESS_KEY=CjGb9PDkjQqMi6V
-S3_SECRET_ACCESS_KEY=8s82NHXq6pPsJAP4S
-SMALLEST_PREFIX_V4=31
-SMALLEST_PREFIX_V6=127
-MAIL_REPORT=no
-SMTP=smtp.example.com:587
-SENDER_MAIL=ripe-updater@example.com
-RECIPIENT_MAIL=noc@example.com
-NETBOX_URL=https://netbox.local
-NETBOX_TOKEN=123456abcdef
-DEFAULT_COUNTRY=DE
-RIPE_MNT_PASSWORD=emptypassword
-RIPE_DB=TEST
-UPDATE_TOKEN=Token 123456abcdef
-DEBUG=no
-TEMPLATE_DIR=./templates
-
+# UI credentials, ie /backups (Administrators -> Updater UI)
 UI_USER=admin
 UI_PASSWORD=password
+
+# Update API credentials (Netbox -> Updater)
+UPDATE_TOKEN=Token 123456abcdef
+
+# Netbox API (Updater -> Netbox)
+NETBOX_URL=https://netbox.local
+NETBOX_TOKEN=123456abcdef
+
+# RIPE (Updater -> RIPE)
+DEFAULT_COUNTRY=GB
+RIPE_MNT_PASSWORD=emptypassword
+RIPE_DB=TEST
+
+# Misc
+DEBUG=no
