--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-UPDATER_HTTP_PORT=9000
+# The port/address which the updater will bind to on the host machine.
+UPDATER_HTTP_PORT=127.0.0.1:9000
+
+# The template directory to use for the RIPE updater (copy your templates to 'custom' & change this)
 RIPE_TEMPLATE_DIR=./ripe-templates/example
