--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   ripe-updater:
-    restart: unless-stopped
+    restart: always
     build:
         context: ./ripe-updater
         dockerfile: Dockerfile
@@ -17,7 +17,7 @@ services:
       - minio
 
   minio:
-    restart: unless-stopped
+    restart: always
     image: docker.io/bitnami/minio:2024
     environment:
       MINIO_ROOT_USER: CjGb9PDkjQqMi6V
