--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ UPDATER_HTTP_PORT=127.0.0.1:9000
 
 # The template directory to use for the RIPE updater (copy your templates to 'custom' & change this)
 RIPE_TEMPLATE_DIR=./ripe-templates/example
+
+# Minio access details
+# When changing, update S3_ACCESS_KEY & S3_SECRET_ACCESS_KEY in .env.updater too
+MINIO_ROOT_USER=CjGb9PDkjQqMi6V
+MINIO_ROOT_PASSWORD=8s82NHXq6pPsJAP4S
+
