--- a/.env.updater.example
+++ b/.env.updater.example
@@ -14,5 +14,10 @@ DEFAULT_COUNTRY=GB
 RIPE_MNT_PASSWORD=emptypassword
 RIPE_DB=TEST
 
+# S3 (Minio by default) backup storage (these must match Minio credentials in .env if using Minio)
+S3_ACCESS_KEY=CjGb9PDkjQqMi6V
+S3_SECRET_ACCESS_KEY=8s82NHXq6pPsJAP4S
+#S3_ENDPOINT_URL (defaulted to local Minio)
+
 # Misc
 DEBUG=no
