--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     restart: always
     image: docker.io/bitnami/minio:2024
     environment:
-      MINIO_ROOT_USER: CjGb9PDkjQqMi6V
-      MINIO_ROOT_PASSWORD: 8s82NHXq6pPsJAP4S
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_USER}
       MINIO_DEFAULT_BUCKETS: ripe-backups
     volumes:
       - "minio-data:/bitnami/minio/data"
